styles/pages/DetailsMobile.module.scss
@import '../../theme/common';
@import '../../theme/theme';

@media (max-width: 768px) {
    .details_container {
        overflow-y: scroll;

        .details_container_left {
            max-height: 100% !important;
        }
    }
}

.main_image_only_container {
    width: 100%;
    height: calc(100% - 170px) !important;
    background-color: $dark;

    .centered_image_outer_container {
        width: 100% !important;
        height: 100% !important;
        position: relative !important;
    }
}

.main_image_and_extra_images_container {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: calc(100% - 170px) !important;
    background-color: $dark;
} 

.full_gallery_panel {
    display: flex;
    flex-direction: column;
    margin: 0px 15px;
    min-width: 300px;
}
.full_gallery_panel_header {
    height: 40px;
    line-height: 20px;
    font-size: 20px;
    font-weight: bold;
    background-color: $dark;
    color: $light;
    padding: 10px;
    border-radius: 5px 5px 0px 0px;
}

.full_gallery_panel_body {
    height: 120px !important;
    background-color: $dark;
    
    border-radius: 0px 0px 5px 5px;

    .full_gallery_container {
        border-radius: 5px;
    }
} 

.full_gallery_container {
    display: flex;
    flex-direction: row;
    padding: 5px;
    margin: 0px;
    overflow-x: auto;
    overflow-y: hidden;
    height: 120px !important;
    min-height: 120px !important;
    max-height: 120px !important;
    background-color: $secondary;

    .extra_images_gallery_container {
        width: 115px !important;
        height: 110px;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        align-items: flex-start;

        .extra_images_gallery_image_container {
            width: 100% !important;
            height: 100% !important;
            position: relative;
            overflow: hidden;
            margin-right: 5px;

            .selected_gallery_image {
                border-radius: 5px;
            }

            .extra_images_gallery_image {
                width: 100px !important;
                height: 100px !important;
                margin: 5px 5px;
            }
        }
    }
}

.selected_gallery_image {
    background-color: $dark !important;
}

.details_container {
    position: absolute;
    height: calc(100% - 100px) !important;
    width: 100% !important;
    display: flex;
    flex-wrap: wrap;
    overflow-y: scroll;
    background-color: $light;

    .details_form_container {
        display: flex;
        flex-direction: column;
        width: 100%;
        height: max-content !important;
        background-color: $light;
    
        .details_navigation_container {
            width: 100%;
            height: fit-content;
            line-height: 50px;
            padding-top: 10px;
            padding-left: 15px;
            margin-bottom: 20px;
        
            .details_navigation_inner_container {
                display: flex;
                flex-direction: row;
                flex-wrap: wrap;
                gap: 10px;
                font-family: $lato_300;
                font-size: 20px;
                font-weight: 500;
        
                .price_wrapper {
                    display: flex;
                    flex-direction: row;
                    border-radius: 5px;
                    border: none;
                    background-color: $primary;
                    padding: 0;
        
                    &:hover {
                        background-color: $secondary;
                        color: $light !important;
                        fill: $light !important;
                    }
                    &:hover > .price_text {
                        background-color: $dark;
                        color: $light !important;
                    }
        
                    .price_label_wrapper {
                        display: flex;
                        flex-direction: row;
                        padding: 5px 10px;
                        border-radius: 5px 0px 0px 5px;
        
                        .price_label_stripe_image {
                            margin: 5px;
                        }
                    }
        
                    .price_text {
                        font-size: 1.5rem;
                        line-height: 40px;
                        color: $light;
                        background-color: $secondary;
                        border-radius: 0px 5px 5px 0px;
                        padding: 5px 10px;
                    }
                }
        
                .piece_sold {
                    font-size: 24px !important;
                    font-weight: 600 !important;
                    margin-right: 10px;
                    color: $error;
                }

                .instagram_link_container {
                    display: flex;
                    flex-direction: row;
                    width: fit-content;
                    color: $light;
                    background-color: $primary;
                    border-radius: 5px;
                
                    &:hover {
                        background-color: $secondary;
                        color: $light;
                    }
                
                    .instagram_image_container {
                        height: 50px;
                        width: 50px;
                        position: relative;
                
                        .instagram_link_image {
                            padding: 10px !important;
                        }
                    }
                
                    .instagram_link_label {
                        line-height: 40px;
                        margin-right: 15px;
                    }
                }

                .edit_piece_button {
                    height: 50px;
                    line-height: 45px;
                    font-size: 20px;
                    border-radius: 5px;
                    padding: 0px 10px;
                    background-color: $primary;
                    border: 1px solid $secondary;
                    color: $light;
                    font-weight: 600;
                
                    &:hover {
                        background-color: $secondary;
                        border: 1px solid $secondary;
                        color: $light;
                    }
                }
            }
        }
    
        .details_description_container {
            padding: 15px 20px 0px 15px;
            width: 100%;
        
            .details_description {
                width: 100%;
                height: max-content;
                margin: 0;
                justify-content: left;
                white-space: pre-wrap;
                color: $secondary;
                font-family: $lato_300;
                font-weight: 600;
                font-size: 1.2em;
                line-height: 1.4em;
            }
        }
    }
}

.img_hor_vert {
    -webkit-transform: scale(-1);
    -ms-transform: scale(-1);
    transform: scale(-1);
}

.loader_container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    height: 100%;

    > div {
        color: $light;
        font-size: 24px;
        font-weight: 600;
        padding-bottom: 20px;
    }
    .loader {
        color: $light;
        height: 100px !important;
        width: 100px !important;
    }
}

.centered_image_staging {
    background-color: $secondary;
    color: $light;
    font-size: 24px;
    margin: 10px;
    padding: 10px 10px;
    border-radius: 5px;
    width: fit-content;
    z-index: 2;
    position: absolute;
    bottom: 0px;
    left: 0px;

    &:hover {
        background-color: $light;
        color: $dark;
    }
}

.extra_padding {
    width: 100%;
    height: 15px;
}

